<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    설정레이아웃-->
    <LinearLayout
        android:id="@+id/settingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <!--        상단 시 분 초 레이아웃-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvHour"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvMin"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvSec"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--        시 분 초 입력하기-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/hourEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="00"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/minEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="00"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/secEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="00"
                android:textSize="25sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnStartCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/btnStartCount"
            android:background="@drawable/btn_empty"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </LinearLayout>

    <!--    타이머 레이아웃-->

    <LinearLayout
        android:id="@+id/timerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        
        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvTimerText"
            android:textSize="50sp" />

<!--        버튼 레이아웃-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnStopCount"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btnStopCount"
                android:background="@drawable/btn_empty"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btnCancelCount"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/btnCancelCount"
                android:background="@drawable/btn_empty"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>